# quanta-demo

./: .env_sample  .gitignore  Dockerfile  README.md  compose-prod.yaml  compose.yaml  entrypoint.sh  pyproject.toml
src/: config.toml  main.py  rank_scenarios.toml
src/api/: fmp.py  http_get.py
src/backtests/: benchmark.py  index.py  investment.py
src/backtests/dates/: backtest_dates.py  period_first_dates.py
src/backtests/dates/dates_in_ptf_plugins/: dates_monthly.py  dates_weekly.py
src/backtests/strategies/demo/strategy_plugins/: strategy_demo_replace.py
src/files_repo/: period_tickers.json
src/financials/: cleaners.py  getters.py  index.py
src/indicators/: rsi.py  sma.py
src/libs/helpers/: argparser.py  interfaces.py  plotters.py  writers.py
src/plotting/: prices.ipynb
src/prices/: getters.py  index.py  prices.py
src/ranks/esr/: eps_adj.py  index.py  processors.py  rank.py  scorings.py
src/symbols/: cleaners.py  getters.py  index.py
