[tool.poetry]
name = "quanta_demo"
version = "0.1.0"
description = ""
authors = ["Rafal Sukiennik <raf.sukiennik@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11, <3.13"
pandas = "^2.0.2"
scipy = "^1.11.0"
requests = "^2.31.0"
aiohttp = "^3.8.4"
xlsxwriter = "^3.1.2"

[tool.poetry.group.dev.dependencies]
openpyxl = "^3.1.2"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"